# Post_Training_Protein_LLM

./: .gitignore  CLAUDE.md  PROJECT_GOALS.md  README.md  REVIEW_POINTS.md  SCIENTIST_TEAM.md  SWE_AGENT_TEAM.md  improvement_plan_260216.md  pyproject.toml  setup_env.sh
.claude/: settings.json
.claude/agents/: analyst.md  code-reviewer.md  data-collector.md  engineer.md  experiment-runner.md  qa.md  reporter.md  research.md  researcher.md  test-writer.md
.claude/commands/: data-prep.md  debug.md  eval.md  train.md
blog/: 2026-02-19_project-kickoff.md  2026-02-20_baseline-experiment-results.md  2026-02-24_boundary-tokens-and-instruct-fix.md  2026-02-25_combined-sft-dataset-assembly.md  README.md  index.html
blog/02-21/: data_conversion_report.md
blog/posts/: 2026-02-19_project-kickoff.html  2026-02-20_baseline-experiment-results.html  2026-02-24_boundary-tokens-and-instruct-fix.html  2026-02-25_combined-sft-dataset-assembly.html  2026-03-02_mlp-vs-text-sft-comparison.html  (+3 more)
configs/: config.yaml
docs/: architecture.md  datasets.md  downstream_tasks_plan.md  implementation_plan_phase5.md  training_guide.md  troubleshooting.md
reports/: combined_sft_data_audit.md
results/: training_log.txt
scripts/: eval_baseline_generation.py  evaluate.py  explore_datasets.ipynb  explore_datasets_executed.ipynb  inference.py  launch_train.sh  prepare_arrow.py  prepare_data.py  run_sft_experiments.sh  test_checkpoint_roundtrip.py  test_model_loading.py  test_perceiver_integration.py  test_vllm_inference.py  train.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+153 files in other folders)
